S3-Load-Balancer-Logs/instances.tf
##################################################################################
# DATA
##################################################################################

data "aws_ssm_parameter" "amzn2_linux" {
  name = "/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2"
}

##################################################################################
# RESOURCES
##################################################################################

# EC2 INSTANCES
resource "aws_instance" "max_global_instance_1" {
  ami                    = nonsensitive(data.aws_ssm_parameter.amzn2_linux.value)
  instance_type          = var.instance_type
  subnet_id              = aws_subnet.public_subnet1.id
  vpc_security_group_ids = [aws_security_group.public_sg.id]
  tags                   = local.common_tags
  iam_instance_profile   = aws_iam_instance_profile.allow_ec2_s3.name
  depends_on             = [aws_iam_role_policy.allow_ec2_s3]


  user_data = <<EOF
#! /bin/bash
sudo amazon-linux-extras install -y nginx1
sudo service nginx start
aws s3 cp s3://${aws_s3_bucket.max_global_s3.id}/website/index.html /home/ec2-user/index.html
aws s3 cp s3://${aws_s3_bucket.max_global_s3.id}/website/Globo_logo_Vert.png /home/ec2-user/Globo_logo_Vert.png
sudo rm /usr/share/nginx/html/index.html
sudo cp /home/ec2-user/index.html /usr/share/nginx/html/index.html
sudo cp /home/ec2-user/Globo_logo_Vert.png /usr/share/nginx/html/Globo_logo_Vert.png
EOF
}

resource "aws_instance" "max_global_instance_2" {
  ami                    = nonsensitive(data.aws_ssm_parameter.amzn2_linux.value)
  instance_type          = var.instance_type
  subnet_id              = aws_subnet.public_subnet2.id
  vpc_security_group_ids = [aws_security_group.public_sg.id]
  tags                   = local.common_tags
  iam_instance_profile   = aws_iam_instance_profile.allow_ec2_s3.name
  depends_on             = [aws_iam_role_policy.allow_ec2_s3]

  user_data = <<EOF
#! /bin/bash
sudo amazon-linux-extras install -y nginx1
sudo service nginx start
aws s3 cp s3://${aws_s3_bucket.max_global_s3.id}/website/index.html /home/ec2-user/index.html
aws s3 cp s3://${aws_s3_bucket.max_global_s3.id}/website/Globo_logo_Vert.png /home/ec2-user/Globo_logo_Vert.png
sudo rm /usr/share/nginx/html/index.html
sudo cp /home/ec2-user/index.html /usr/share/nginx/html/index.html
sudo cp /home/ec2-user/Globo_logo_Vert.png /usr/share/nginx/html/Globo_logo_Vert.png
EOF
}

# IAM Role
# - Creating a new role for EC2 instance to grant permission to S3
resource "aws_iam_role" "allow_ec2_s3" {
  name = "allow_ec2_s3"

  # Terraform's "jsonencode" function converts a
  # Terraform expression result to valid JSON syntax.
  assume_role_policy = jsonencode({
    Version = "2012-10-17"
    Statement = [
      {
        Action = "sts:AssumeRole"
        Effect = "Allow"
        Sid    = ""
        Principal = {
          Service = "ec2.amazonaws.com"
        }
      },
    ]
  })

  tags = local.common_tags
}

# IAM Role Policy
# - Grant role access to S3 bucket
resource "aws_iam_role_policy" "allow_ec2_s3" {
  name = "allow_ec2_s3"
  role = aws_iam_role.allow_ec2_s3.id

  # Terraform's "jsonencode" function converts a
  # Terraform expression result to valid JSON syntax.
  policy = jsonencode({
    Version = "2012-10-17"
    Statement = [
      {
        Action = [
          "s3:*",
        ]
        Effect = "Allow"
        Resources = [
          "arn:aws:s3:::${local.s3_bucket_name}",
          "arn:aws:s3:::${local.s3_bucket_name}/*"
        ]
      },
    ]
  })
}

# IAM Instance Profile
# - Assign role to EC2 instance
resource "aws_iam_instance_profile" "allow_ec2_s3" {
  name = "allow_ec2_s3_profile"
  role = aws_iam_role.allow_ec2_s3.name

  tags = local.common_tags
}
